--- a/src/styles/Cells.css
+++ b/src/styles/Cells.css
@@ -20,3 +20,10 @@
     height: 1.5rem;
   }
 }
+
+@media only screen and (max-width: 338px) {
+  .sudoku-cell {
+    width: 1rem;
+    height: 1rem;
+  }
+}
